--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -21,10 +21,9 @@ select:-webkit-autofill:focus {
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-        'Droid Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    background: var(--white);
+    font-family: 'helveticanowtext', sans-serif !important;
+    padding-top: 0 !important;
 }
 
 code {
