remake tablet code, remove background colour and change some dimensions

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,24 +1,5 @@
 @import '~materialize-css/dist/css/materialize.min.css';
 
-/**
- * Конструкция позволяет убрать Хромовские стили для инпутов,
- * т.к. те подставляют свои цвета
-*/
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-    border: none !important;
-    -webkit-text-fill-color: #000 !important; /* цвет текста */
-    -webkit-box-shadow: 0 0 0px 1000px #fff inset !important; /* цвет заднего фона */
-}
-/* ___________________________________________________ */
-
 body {
     margin: 0;
     background: var(--white);
@@ -30,3 +11,18 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+/* убираем желтый фон у инпутов при автозаполнении */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: #000;
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
